--- a/menu.css
+++ b/menu.css
@@ -26,10 +26,6 @@
     margin-right: 10px;
 }
 
-/*.navigation {
-  
-  }*/
-
 .nav-button {
     font-size: 30px;
     margin: 1rem;
@@ -52,45 +48,62 @@
 
 .menu-container {
     display: flex;
-    flex-direction: row;
-    /* Kuvien ja tekstien rinnakkain */
-    justify-content: flex-start;
-    /* Tasaa vasemmalle */
+    flex-direction: column;
     align-items: center;
-    /* Keskittää pystysuunnassa */
     gap: 2rem;
-    /* Väli kuvien ja tekstien välillä */
+}
+
+.menu-heading-container {
+    text-align: center;
+    margin-bottom: 1rem;
+    font-family: Segoe Script;
+}
+
+.menu-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 2rem;
 }
 
 .menu-images {
     display: flex;
     flex-direction: column;
-    /* Kuvat pinoutuvat pystysuoraan */
-    margin-right: 2rem;
-    /* Väli tekstien kanssa */
-    order: 1;
+    align-items: flex-start;
+    gap: 2rem;
+    margin-left: -40rem;
+    margin-bottom: 2rem;
 }
 
 .menu-images img {
     border-radius: 50%;
+    /* makes img circle*/
     width: 10rem;
     height: 10rem;
     cursor: pointer;
-    /* shows user that photo can be clicked*/
-    margin: 1rem;
-
+    /* shows user that imgs can be clicked*/
 }
 
 .image-link:hover {
     transform: scale(1.05);
-    /* adds zoom effect when hoverin above img */
+    /* Adds zoom effect when hovering over images */
 }
 
-.menu-text {
+.menu-text-container {
     display: flex;
     flex-direction: column;
-    /* Tekstit päällekkäin */
-    justify-content: center;
-    /* Keskittää tekstit pystysuunnassa */
-    order: 2;
+    gap: 10rem;
+}
+
+.menu-item h3 {
+    font-family: Segoe Script;
+    margin: 0;
+    font-size: 1.5rem;
+}
+
+.menu-item p {
+    margin: 0;
+    font-size: 1rem;
+    font-family: Segoe Script;
 }
