--- a/profiili.css
+++ b/profiili.css
@@ -126,8 +126,108 @@ section h1 {
     font-weight: bold;
 }
 
-/*Header + footer ↓↓*/
+/*login modal*/
+#login-modal {
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 1rem;
+    border-style: double ;
+    border-color: rgb(217, 222, 225);
+    background: #F0E9E9;
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+    width: auto;
+    height: auto;
+    max-width: 35%;
+    animation: fadeIn 0.3s ease-out;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: italic;
+    transition: transform 0.3s ease;
+}
 
+#login-modal::backdrop {
+    background: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(3px);
+}
+
+/* Animate appearance */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    height: auto;
+    margin-top: 5rem;
+}
+
+/* Input styling + buttons*/
+#login-input {
+    display: flex;
+    flex-direction: column; 
+    margin-top: 3rem;    
+}
+
+#login-input input {
+    height: 3vh;
+    width: 35vh;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 0.5rem;
+    border-bottom-style: double ;
+    border-bottom-color: rgb(217, 222, 225);
+    border-right-style: double ;
+    border-right-color: rgb(217, 222, 225);
+    font-size: 1rem;
+}
+
+#login-input input:focus {
+    outline-color: rgb(184, 188, 190);
+    border-width: 0.2rem;
+    box-shadow: 0 0 0.3125rem rgb(107, 110, 111);
+}
+
+#login-buttons {
+    display: flex; 
+    justify-content: center;
+    margin-top: 1rem;
+}
+
+#login-buttons button {
+    border-radius: 1rem;
+    width: 7rem;
+    height: 3rem;
+    margin: 2rem;
+    border: none;
+    background-color: whitesmoke;
+    border-bottom-style: double ;
+    border-bottom-color: rgb(217, 222, 225);
+    border-right-style: double ;
+    border-right-color: rgb(217, 222, 225);
+}
+
+#login-buttons button:hover {
+    background-image: url(pictures/white-background.jpg);
+    box-shadow: 0 0 0.3125rem rgb(107, 110, 111);
+    border-width: 0.5rem;
+}
+
+
+
+
+/*Header + footer ↓↓*/
 .page-header {
     display: flex;
     flex-direction: row;
