--- a/src/menu/menu.css
+++ b/src/menu/menu.css
@@ -145,3 +145,9 @@
   text-decoration: none;
   cursor: pointer;
 }
+
+.modal.show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
