--- a/src/menu/menu.css
+++ b/src/menu/menu.css
@@ -1,3 +1,11 @@
+/* Reset default margins and paddings */
+body,
+html {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .webpage {
   background-color: #9f8c8c;
 }
