--- a/restaurant-app/src/App.css
+++ b/restaurant-app/src/App.css
@@ -4,3 +4,12 @@
   padding: 2rem;
   text-align: center;
 }
+
+nav a {
+  padding: 1rem;
+  text-decoration: none;
+}
+
+nav a:hover {
+  font-weight: 500;
+}
