--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,73 +1,23 @@
-/* Reset default margins and paddings */
-body,
-html {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.webpage {
+/* Kohdistetaan kaikki tyylit vain MenuPage-komponenttiin */
+#menu-webpage {
   background-color: #9f8c8c;
+  padding: 2rem;
 }
 
-.page-container {
-  width: 40%;
-  margin: auto;
-}
-
-.page-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding-bottom: 1rem;
-  border-bottom: 1px solid black;
-}
-
-.logo {
-  display: flex;
-}
-
-#logo-image {
-  height: 50px;
-  width: 50px;
-  border: 2px solid black;
-  margin-right: 10px;
-}
-
-.nav-button {
-  font-size: 30px;
-  margin: 1rem;
-  text-align: center;
-  text-decoration: none;
-  color: black;
-}
-
-.contact-info {
-  display: flex;
-  flex-direction: column;
-}
-
-.page-footer {
-  display: flex;
-  justify-content: center;
-  border-top: 1px solid black;
-  font-size: 12px;
-}
-
-.menu-container {
+#menu-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2rem;
 }
 
-.menu-heading-container {
+#menu-heading-container {
   text-align: center;
   margin-bottom: 1rem;
   font-family: Segoe Script;
 }
 
-.menu-content {
+#menu-content {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -75,7 +25,7 @@ html {
   gap: 2rem;
 }
 
-.menu-images {
+#menu-images {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -84,39 +34,45 @@ html {
   margin-bottom: 2rem;
 }
 
-.menu-images img {
+#menu-images img {
   border-radius: 50%;
-  /* makes img circle*/
   width: 10rem;
   height: 10rem;
   cursor: pointer;
-  /* shows user that imgs can be clicked*/
 }
 
-.image-link:hover {
-  transform: scale(1.05);
-  /* Adds zoom effect when hovering over images */
-}
-
-.menu-text-container {
+#menu-text-container {
   display: flex;
   flex-direction: column;
   gap: 10rem;
 }
 
-.menu-item h3 {
+#menu-item h3 {
   font-family: Segoe Script;
   margin: 0;
   font-size: 1.5rem;
 }
 
-.menu-item p {
+#menu-item p {
   margin: 0;
   font-size: 1rem;
   font-family: Segoe Script;
 }
 
-.modal {
+#page-footer {
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid black;
+  font-size: 12px;
+}
+
+#contact-info {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Modal styles */
+#modal {
   display: none;
   /* Modal hidden by default */
   position: fixed;
@@ -129,7 +85,13 @@ html {
   /* Darker background */
 }
 
-.modal-content {
+#modal.show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#modal-content {
   background-color: #dcd0d0;
   margin: 15% auto;
   padding: 20px;
@@ -139,7 +101,7 @@ html {
   border-radius: 1rem;
 }
 
-.close {
+#close {
   color: #aaa;
   float: right;
   font-size: 28px;
@@ -147,15 +109,9 @@ html {
   cursor: pointer;
 }
 
-.close:hover,
-.close:focus {
+#close:hover,
+#close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
-}
-
-.modal.show {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
