--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F0E9E9;
+  background-color: #9f8c8c;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
