--- a/src/css/register.css
+++ b/src/css/register.css
@@ -18,7 +18,8 @@
   animation: fadeIn 0.3s ease-out;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-style: italic;
-  transition: transform 0.3s ease;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 #register-container h2 {
