--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,4 +1,3 @@
-/* Kohdistetaan kaikki tyylit vain MenuPage-komponenttiin */
 #menu-webpage {
   display: flex;
   background-color: #9f8c8c;
@@ -22,7 +21,7 @@ main {
 #menu-heading-container {
   text-align: center;
   margin-bottom: 1rem;
-  font-family: Segoe Script;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #menu-content {
@@ -60,7 +59,7 @@ main {
 }
 
 #menu-item h3 {
-  font-family: Segoe Script;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   font-size: 1.5rem;
 }
@@ -68,7 +67,7 @@ main {
 #menu-item p {
   margin: 0;
   font-size: 1rem;
-  font-family: Segoe Script;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /*#page-footer {
