--- a/src/css/login.css
+++ b/src/css/login.css
@@ -67,24 +67,27 @@
 }
 
 #login-form button {
-  color: gray;
-  background-color: whitesmoke;
-  font-weight: 600;
-  border-radius: 1rem;
-  width: 7rem;
-  height: 3rem;
-  margin: 2rem;
-  border: none;
+  border-style: none;
+  border-radius: 0.5rem;
   border-bottom-style: double ;
   border-bottom-color: rgb(217, 222, 225);
   border-right-style: double ;
   border-right-color: rgb(217, 222, 225);
+  width: 5rem;
+  height: 2.2rem;
+  font-weight: bold;
+  font-size: 17px;
+  color: #aaa;
+  background-color: whitesmoke;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 #login-form button:hover {
-  box-shadow: 0 0 0.3125rem rgb(107, 110, 111);
-  border-width: 0.5rem;
-  background-color: #F0E9E9;
   color: black;
-  font-weight: 600;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 18px;
+  border-bottom-color: rgb(197, 201, 203);
+  border-right-color: rgb(197, 201, 203);
 }
