--- a/src/css/login.css
+++ b/src/css/login.css
@@ -17,12 +17,13 @@
   margin-top: 3rem;
   margin-bottom: 3rem;
   font-style: italic;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #login-container h2{
   color: black;
   margin-top: 3rem;
-  font-weight: 800;
+  font-weight: bold;
   font-size: xx-large;
 }
 
