--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -21,7 +21,6 @@ main {
 #menu-heading-container {
   text-align: center;
   margin-bottom: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 #menu-content {
@@ -59,7 +58,6 @@ main {
 }
 
 #menu-item h3 {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   font-size: 1.5rem;
 }
@@ -67,7 +65,6 @@ main {
 #menu-item p {
   margin: 0;
   font-size: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 /*#page-footer {
@@ -104,10 +101,11 @@ main {
 
 #modal-content {
   background-color: #dcd0d0;
-  margin: 15% auto;
-  padding: 20px;
+  padding: 2rem;
   border: 1px solid #888;
   width: 80%;
+  max-height: 50rem;
+  overflow-y: auto;
   text-align: center;
   border-radius: 1rem;
 }
@@ -127,9 +125,8 @@ main {
   cursor: pointer;
 }
 
-/* Modalin header and img */
+/* Modal header and img */
 #modal-content h2 {
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 1.8rem;
   margin-bottom: 1rem;
 }
