--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,7 +1,6 @@
 #menu-webpage {
   display: flex;
   background-color: #9f8c8c;
-  /*padding: 2rem;*/
   width: auto;
   height: auto;
   margin-bottom: 0.5rem;
@@ -25,18 +24,28 @@ main {
 
 #menu-content {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
+  flex-direction: column;
+  align-items: center;
   gap: 2rem;
 }
 
-#menu-images {
+.menu-item-container {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 2rem;
-  margin-bottom: 2rem;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  max-width: 43.75rem;
+  padding: 0.9375rem;
+  border-radius: 0.5rem;
+  transition: background-color 0.3s, border 0.3s;
+}
+
+.menu-item-container.highlighted {
+  background-color: #f5f0f0;
+}
+
+#menu-images {
+  margin-right: 1.25rem;
 }
 
 #menu-images img {
@@ -52,32 +61,18 @@ main {
 }
 
 #menu-text-container {
-  display: flex;
-  flex-direction: column;
-  gap: 10rem;
+  text-align: left;
 }
 
 #menu-item h3 {
   margin: 0;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 
 #menu-item p {
   margin: 0;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
-
-/*#page-footer {
-  display: flex;
-  justify-content: center;
-  border-top: 1px solid black;
-  font-size: 12px;
-}
-
-#contact-info {
-  display: flex;
-  flex-direction: column;
-}*/
 
 /* Modal styles */
 #modal {
@@ -102,7 +97,6 @@ main {
 #modal-content {
   background-color: #dcd0d0;
   padding: 2rem;
-  border: 1px solid #888;
   width: 80%;
   max-height: 90vh;
   overflow-y: auto;
@@ -113,7 +107,7 @@ main {
 #close {
   color: #aaa;
   float: right;
-  font-size: 28px;
+  font-size: 1.75rem;
   font-weight: bold;
   cursor: pointer;
 }
@@ -132,14 +126,14 @@ main {
 }
 
 #modal-content img {
-  max-width: 300px;
+  max-width: 18.75rem;
   width: 100%;
   height: auto;
   border-radius: 1rem;
   margin-bottom: 1rem;
 }
 
-/* Signle dish */
+/* Single dish */
 .dish-item {
   text-align: left;
   background-color: #f5f0f0;
@@ -150,20 +144,20 @@ main {
 
 /* Dish name */
 .dish-item h4 {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   margin: 0 0 0.5rem;
 }
 
 /* Description and price */
 .dish-item p {
   margin: 0.2rem 0;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 /* Allergens title */
 .dish-item h5 {
   margin-top: 0.5rem;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
@@ -175,6 +169,6 @@ main {
 
 .dish-item ul li {
   list-style-type: disc;
-  font-size: 0.95rem;
+  font-size: 1rem;
   margin-left: 1rem;
 }
