--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
-
-html, body {
+html,
+body {
   padding: 0;
   margin: 0;
   background-color: #9f8c8c;
   width: 100%;
   height: 100%;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .main-container {
@@ -14,6 +15,7 @@ html, body {
   width: auto;
   width: auto;
 }
+
 #page-footer {
   display: flex;
   flex-direction: column;
@@ -41,9 +43,9 @@ html, body {
 
 #contact-info button {
   border-radius: 0.3rem;
-  border-bottom-style: double ;
+  border-bottom-style: double;
   border-bottom-color: rgb(217, 222, 225);
-  border-right-style: double ;
+  border-right-style: double;
   border-right-color: rgb(217, 222, 225);
   height: 1.5rem;
   margin-top: 0.5rem;
