--- a/src/css/management.css
+++ b/src/css/management.css
@@ -11,10 +11,9 @@
 
 #management-options {
   display: flex;
-  width: auto;
+
   height: auto;
-  max-height: 100vh;
-  overflow-y: auto;
+
   background-color: #F0E9E9;
   border-radius: 1rem;
   margin-bottom: 2rem;
@@ -25,6 +24,9 @@
   display: flex;
   flex-direction: column;
   padding: 2rem;
+  overflow-y: auto;
+  max-height: 90vh;
+  width: auto;
 }
 
 #menu-option h4 {
@@ -60,10 +62,11 @@
   gap: 1rem;
   padding: 0.5rem 1rem;
   border: 1px solid #ccc;
+  margin: 0.1rem;
   margin-bottom: 0.5rem;
-  border-radius: 0.2rem;
+  border-radius: 0.3rem;
   background-color: #f9f9f9;
-  width: 100%;
+
 }
 
 .menu-name {
@@ -89,6 +92,8 @@
   display: flex;
   flex-direction: column;
   padding: 2rem;
+  overflow-y: auto;
+  max-height: 90vh;
 }
 
 #dishes-option h4 {
@@ -102,11 +107,10 @@
   gap: 1rem;
   padding: 0.5rem 1rem;
   border: 1px solid #ccc;
+  margin: 0.1rem;
   margin-bottom: 0.5rem;
-  border-radius: 6px;
+  border-radius: 0.3rem;
   background-color: #f9f9f9;
-  width: 100%;
-  max-width: 50vh;
 }
 
 .dish-name {
