--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,4 +1,3 @@
-
 /*login modal*/
 #login-container {
   display: flex;
@@ -7,7 +6,7 @@
   align-items: center;
   border: none;
   border-radius: 1rem;
-  border-style: double ;
+  border-style: double;
   border-color: rgb(217, 222, 225);
   background-color: #F0E9E9;
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
@@ -17,10 +16,10 @@
   margin-top: 3rem;
   margin-bottom: 3rem;
   font-style: italic;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#login-container h2{
+#login-container h2 {
   color: black;
   margin-top: 3rem;
   font-weight: bold;
@@ -52,9 +51,9 @@
   padding: 0.5rem;
   border: none;
   border-radius: 0.5rem;
-  border-bottom-style: double ;
+  border-bottom-style: double;
   border-bottom-color: rgb(217, 222, 225);
-  border-right-style: double ;
+  border-right-style: double;
   border-right-color: rgb(217, 222, 225);
   background-color: whitesmoke;
   font-size: 1rem;
@@ -70,9 +69,9 @@
 #login-form button {
   border-style: none;
   border-radius: 0.5rem;
-  border-bottom-style: double ;
+  border-bottom-style: double;
   border-bottom-color: rgb(217, 222, 225);
-  border-right-style: double ;
+  border-right-style: double;
   border-right-color: rgb(217, 222, 225);
   width: 5rem;
   height: 2.2rem;
@@ -91,4 +90,28 @@
   font-size: 18px;
   border-bottom-color: rgb(197, 201, 203);
   border-right-color: rgb(197, 201, 203);
+}
+
+@media (max-width: 768px) {
+  #login-container {
+    width: 90%;
+    max-width: 90%;
+    margin: 2rem auto;
+    padding: 1rem;
+  }
+
+  #login-input input {
+    width: 80%;
+    font-size: 1rem;
+    margin: 0.5rem auto;
+  }
+
+  #login-form {
+    width: 100%;
+  }
+
+  #login-form button {
+    width: 60%;
+    font-size: 1rem;
+  }
 }
