--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -172,3 +172,64 @@ main {
   font-size: 1rem;
   margin-left: 1rem;
 }
+
+@media (max-width: 768px) {
+  #menu-webpage {
+    flex-direction: column;
+    padding: 1rem;
+  }
+
+  .menu-item-container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 1rem;
+  }
+
+  #menu-images {
+    margin: 0 0 1rem 0;
+  }
+
+  #menu-images img {
+    width: 8rem;
+    height: 8rem;
+  }
+
+  #menu-text-container {
+    text-align: center;
+  }
+
+  #menu-item h3 {
+    font-size: 1.5rem;
+  }
+
+  #menu-item p {
+    font-size: 1rem;
+  }
+
+  #modal-content {
+    width: 90%;
+    padding: 1rem;
+  }
+
+  #modal-content h2 {
+    font-size: 1.5rem;
+  }
+
+  #modal-content img {
+    max-width: 100%;
+  }
+
+  .dish-item h4 {
+    font-size: 1.2rem;
+  }
+
+  .dish-item p,
+  .dish-item h5 {
+    font-size: 1rem;
+  }
+
+  .dish-item ul li {
+    font-size: 0.95rem;
+  }
+}
