--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,22 +1,24 @@
-
 .profile-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-size: cover; /* Adjust the size of the background image */
-  background-repeat: no-repeat; /* Prevent the background image from repeating */
-  background-position: center; /* Center the background image */
+  background-size: cover;
+  /* Adjust the size of the background image */
+  background-repeat: no-repeat;
+  /* Prevent the background image from repeating */
+  background-position: center;
+  /* Center the background image */
   height: auto;
   width: auto;
   min-width: 110vh;
   position: relative;
   background:
-  linear-gradient(to right, #9f8c8c, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 80%, #9f8c8c);
+    linear-gradient(to right, #9f8c8c, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 80%, #9f8c8c);
   background-color: whitesmoke;
   background-size: cover;
   background-position: center;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #profile-name {
@@ -27,7 +29,7 @@
 }
 
 section h1 {
-  color:black;
+  color: black;
   font-style: italic;
   font-size: 48px;
   margin: 0rem;
@@ -44,7 +46,7 @@ section h1 {
   margin: 1rem;
   margin-top: 1rem;
   border-radius: 1rem;
-  border-style: double ;
+  border-style: double;
   border-color: rgb(217, 222, 225);
 }
 
@@ -55,15 +57,15 @@ section h1 {
 }
 
 .list li {
-  color:black;
+  color: black;
   text-align: left;
   margin: 1rem;
   background-color: whitesmoke;
   border-radius: 0.5rem;
   padding: 0.6rem;
-  border-bottom-style: double ;
+  border-bottom-style: double;
   border-bottom-color: rgb(217, 222, 225);
-  border-right-style: double ;
+  border-right-style: double;
   border-right-color: rgb(217, 222, 225);
   font-size: 19px;
 }
@@ -73,9 +75,12 @@ section h1 {
 }
 
 #settings-button {
-  background: none; /* Removes default button background */
-  border: none;     /* Removes default button border */
-  padding: 0;       /* Removes extra padding */
+  background: none;
+  /* Removes default button background */
+  border: none;
+  /* Removes default button border */
+  padding: 0;
+  /* Removes extra padding */
   margin: 0.5rem;
   margin-bottom: 1rem;
 }
@@ -110,7 +115,7 @@ section h1 {
   width: 10rem;
   height: 10rem;
   border-radius: 5rem;
-  border-style: double ;
+  border-style: double;
   border-color: rgb(217, 222, 225);
   font-size: 20px;
   padding: 0.1rem;
@@ -188,7 +193,7 @@ section h1 {
   max-height: 90vh;
   overflow-y: auto;
   flex-direction: column;
-  border-style: double ;
+  border-style: double;
   border-color: rgb(217, 222, 225);
 }
 
@@ -235,9 +240,9 @@ section h1 {
   padding: 0.5rem;
   border: none;
   border-radius: 0.5rem;
-  border-bottom-style: double ;
+  border-bottom-style: double;
   border-bottom-color: rgb(217, 222, 225);
-  border-right-style: double ;
+  border-right-style: double;
   border-right-color: rgb(217, 222, 225);
   font-size: 1rem;
 }
@@ -260,9 +265,9 @@ section h1 {
 .modal-buttons button {
   border-style: none;
   border-radius: 0.5rem;
-  border-bottom-style: double ;
+  border-bottom-style: double;
   border-bottom-color: rgb(217, 222, 225);
-  border-right-style: double ;
+  border-right-style: double;
   border-right-color: rgb(217, 222, 225);
   width: 5rem;
   height: 2.7rem;
@@ -279,4 +284,85 @@ section h1 {
   font-size: 18px;
   border-bottom-color: rgb(197, 201, 203);
   border-right-color: rgb(197, 201, 203);
+}
+
+
+
+@media (max-width: 768px) {
+
+
+  .modal {
+    width: 90%;
+    padding: 1rem;
+    max-height: 80vh;
+    border-radius: 1rem;
+  }
+
+
+  .modal h2 {
+    font-size: 1.6rem;
+  }
+
+  .modal input {
+    width: 80%;
+    height: 3.5vh;
+    font-size: 1rem;
+  }
+
+  .modal-buttons button {
+    width: 4rem;
+    height: 2.5rem;
+    font-size: 1rem;
+    margin: 0.5rem;
+  }
+
+  .profile-container {
+    min-width: 100vw;
+    padding: 1rem;
+  }
+
+  .list {
+    min-width: 80vw;
+    margin-top: 1rem;
+  }
+
+  .list li {
+    font-size: 1.2rem;
+    padding: 0.5rem;
+  }
+
+  section h1 {
+    font-size: 2rem;
+    margin-top: 2rem;
+  }
+
+  .profile-bottom {
+    flex-direction: column;
+    margin-top: 1rem;
+    align-items: center;
+  }
+
+  #registered_since,
+  #vip {
+    width: 6rem;
+    height: 6rem;
+    font-size: 1.2rem;
+  }
+
+  .page-header {
+    flex-direction: column;
+    padding-bottom: 1rem;
+  }
+
+  .nav-button {
+    font-size: 1.5rem;
+    margin: 0.5rem;
+  }
+
+  .contact-info {
+    text-align: center;
+  
+  }
+
+
 }
