--- a/src/css/management.css
+++ b/src/css/management.css
@@ -11,9 +11,7 @@
 
 #management-options {
   display: flex;
-
   height: auto;
-
   background-color: #F0E9E9;
   border-radius: 1rem;
   margin-bottom: 2rem;
@@ -35,7 +33,8 @@
 
 /*add buttons*/
 #add-menu-button,
-#add-dish-button {
+#add-dish-button,
+#add-allergen-button {
   border-style: none;
   color: #aaa;
   float: right;
@@ -49,7 +48,8 @@
 }
 
 #add-menu-button:hover,
-#add-dish-button:hover {
+#add-dish-button:hover,
+#add-allergen-button:hover {
   color: black;
   text-decoration: none;
   cursor: pointer;
@@ -66,7 +66,6 @@
   margin-bottom: 0.5rem;
   border-radius: 0.3rem;
   background-color: #f9f9f9;
-
 }
 
 .menu-name {
@@ -125,7 +124,9 @@
 }
 
 .update-btn,
-.delete-btn {
+.delete-btn,
+#link-button,
+#unlink-button {
   padding: 0.2rem 0.4rem;
   font-size: 0.8rem;
   cursor: pointer;
@@ -143,7 +144,9 @@
 }
 
 .update-btn:hover,
-.delete-btn:hover {
+.delete-btn:hover,
+#link-button:hover,
+#unlink-button:hover {
   color: black;
   text-decoration: none;
   cursor: pointer;
@@ -307,8 +310,6 @@ textarea:focus {
   min-height: 80px;
 }
 
-
-
 #close-menu-modal {
   position: absolute;
   top: 8px;
@@ -330,3 +331,41 @@ textarea:focus {
     transform: translateY(0);
   }
 }
+
+#allergens-option {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  background-color: #F0E9E9;
+  border-radius: 1rem;
+  margin-bottom: 2rem;
+
+}
+
+#allergens-option h4 {
+  font-size: 25px;
+}
+
+.allergen-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  padding: 0.5rem 1rem;
+  border: 1px solid #ccc;
+  margin: 0.1rem;
+  margin-bottom: 0.5rem;
+  border-radius: 0.3rem;
+  background-color: #f9f9f9;
+}
+
+.allergen-name {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.allergen-buttons button {
+  margin-left: 0.5rem;
+}
+
