--- a/src/css/management.css
+++ b/src/css/management.css
@@ -5,7 +5,32 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+}
 
+.go-to-reservation-btn {
+  padding: 0.2rem 0.4rem;
+  font-size: 20px;
+  color: #aaa;
+  cursor: pointer;
+  border-style: none;
+  border-radius: 0.5rem;
+  border-bottom-style: double;
+  border-bottom-color: rgb(217, 222, 225);
+  border-right-style: double;
+  border-right-color: rgb(217, 222, 225);
+  background-color: whitesmoke;
+  font-weight: bold;
+  width: 25vh;
+  height: 8vh;
+  margin-top: 3rem;
+}
+
+.go-to-reservation-btn:hover {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  border-bottom-color: rgb(197, 201, 203);
+  border-right-color: rgb(197, 201, 203);
 }
 
 #management-options {
